# vermay-agent-workbench

./: .env  .gitignore  README.md  pyproject.toml
config/: mcp_servers.json  model_profiles.json  models.json
data/: ssh_config.json
docs/: AI-collaboration-guide.md  README.md  code-organization-review.md  langgraph-interrupt-resume.md  modules.md  operations.md  overview.md  server-api-readiness.md  toolnode-evaluation.md
mini_agent/: __init__.py  app_factory.py  context_builder.py  env_config.py  errors.py  evaluation.py  main.py  mcp_client.py  mcp_config.py  mcp_models.py  mcp_prompts.py  mcp_selection.py  mcp_tool_adapter.py  mcp_transport.py  model_selection.py  progress.py  result_summary.py  runtime.py  runtime_context.py  ssh_client.py  storage.py  tooling.py  types.py
mini_agent_langgraph/: __init__.py  adapters.py  graph.py  nodes.py  routing.py  runner.py  state.py  streaming.py  toolnode_adapter.py
scripts/: a2a_dev_smoke.sh
skills/: kubernetes-readonly-debug.md
tests/: test_api_a2a_adapter.py  test_api_a2a_compatibility.py  test_api_a2a_projection.py  test_api_a2a_readiness.py  test_api_app.py  test_api_lifecycle.py  test_api_service.py  test_api_session_models.py  test_api_session_store.py  test_app_factory.py  test_env_config.py  test_errors.py  test_evaluation.py  test_k8s_mcp_config.py  test_k8s_mcp_server.py  test_langgraph_runtime.py  test_langgraph_tool_parity.py  test_main_agent_api.py  test_main_agent_core.py  test_main_agent_store.py  test_main_cli_config.py  test_main_subcommands.py  test_mcp_client.py  test_mcp_prompts.py  test_mcp_resources.py  test_mcp_selection.py  test_mcp_transport.py  test_memory.py  test_model_factory.py  test_model_parser.py  test_model_selection.py  test_observation.py  test_ollama_config.py  test_ollama_env_config.py  test_openai_compatible_client.py  (+12 more)
(+126 files in other folders)
