[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "vermay-agent-workbench"
version = "0.1.0"
description = "An experimental local workbench for task-based, resumable agents."
requires-python = ">=3.11"
dependencies = [
    "rich>=13.7",
    "pytest>=8.0",
    "langgraph>=1.0",
    "langgraph-checkpoint-sqlite>=3.0",
    "pydantic>=2.0",
    "mcp>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.scripts]
vermay-agent = "vermay_agent.main:main"
mini-agent = "vermay_agent.main:main"

[tool.setuptools.packages.find]
include = ["vermay_agent*", "mini_agent"]
